--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,7 @@
             <artifactId>lombok</artifactId>
             <version>1.18.24</version>
         </dependency>
+<!--        flink整合fafka-->
         <dependency>
             <groupId>org.apache.flink</groupId>
             <artifactId>flink-connector-kafka_${scala.binary.version}</artifactId>
